--- a/src/style.css
+++ b/src/style.css
@@ -1,1 +1,69 @@
 @import "~bootstrap/dist/css/bootstrap.min.css";
+
+* {
+  margin: 0;
+  padding: 0;
+}
+
+body {
+  background: rgb(3, 71, 3);
+  text-align: center;
+}
+
+.card {
+  position: relative;
+  float: left;
+  margin-left: 310px;
+  margin-top: 110px;
+  width: 250px;
+  height: 400px;
+  border-radius: 10px;
+  background: #fff;
+  -webkit-box-shadow: 3px 3px 7px rgba(0, 0, 0, 0.3);
+  box-shadow: 3px 3px 7px rgba(0, 0, 0, 0.3);
+  border: 1px solid black;
+}
+
+.card span {
+  text-align: center;
+  font: 100px/220px Georgia, Times New Roman, serif;
+}
+
+.number {
+  font-size: 180px;
+  line-height: 350px;
+  text-align: center;
+  margin-top: 73px;
+  margin-right: 5px;
+}
+
+#icon1 {
+  position: absolute;
+  top: 0;
+  left: 0;
+  padding-left: 20px;
+  font-size: 70px;
+}
+
+#icon2 {
+  position: absolute;
+  bottom: 0;
+  right: 0;
+  padding-right: 20px;
+  font-size: 70px;
+}
+
+.click {
+  padding-top: 550px;
+  padding-right: 10px;
+}
+
+.button {
+  background: lightgray;
+  height: 50px;
+  width: 200px;
+}
+
+.button:hover {
+  background: yellow;
+}
